--- a/idrs4/Views/RoleManage/Index.cshtml
+++ b/idrs4/Views/RoleManage/Index.cshtml
@@ -1,4 +1,5 @@
-﻿<div class="page-title">
+﻿@using idrs4.PoJo
+<div class="page-title">
     <div class="title_left">
         <h3>角色管理 </h3>
     </div>
@@ -30,17 +31,29 @@
                 <div class="clearfix"></div>
             </div>
             <div class="x_content">
-                <div id="toolbar">
-
-                    <button type="button" class="btn btn-primary " data-toggle="modal" data-target="#addRoleModal"><i class="fa fa-plus"></i>新增</button>
-                    <button type="button" class="btn btn-success" data-toggle="modal" data-target="#RoleToPermissionModal"><i class="fa fa-users"></i>权限赋值</button>
-                    <button type="button" class="btn btn-danger " onclick="remove()"><i class="fa fa-trash-o"></i>删除</button>
-  
-
-
-
+                <div id="toolbar-btn" class=" pull-left" style="padding-bottom:10px;">
+                    @if (ExPrincipal.IsPermission(User, "RoleManage.Add"))
+                    {
+                        <button type="button" class="btn btn-primary " style="float:left;" data-toggle="modal" data-target="#addRoleModal"><i class="fa fa-plus"></i>新增</button>
+                    }
+                    @if (ExPrincipal.IsPermission(User, "RoleManage.Del"))
+                    {
+                        <button type="button" class="btn btn-danger " style="float:left;" onclick="remove()"><i class="fa fa-trash-o"></i>删除</button>
+                    }
+                    <input class="form-control" placeholder="角色名..." type="text" style="float:left;width:150px;margin-right:5px;" name="searchpermissiontxt" id="searchpermissiontxt">
+                    <select class=" form-control ClientName" name="ClientName" style="float:left;width:150px;margin-right:5px;" id="ClientNameBySearch">
+                        <option value="">--请选择--</option>
+                    </select>
+                    <button id="searchpermissionbtn" type="button" class="btn btn-primary ">
+                        <i class="fa fa-search">搜索</i>
+                    </button>
+                    <button id="btn_reset" type="button" class="btn btn-default">
+                        <i class="fa fa-eraser">重置</i>
+                    </button>
 
                 </div>
+
+
 
                 <table id="table" class="table table-striped table-bordered">
                     <thead>
@@ -66,189 +79,208 @@
     @*<div class="modal fade bs-example-modal-lg" id="addRoleModal" tabindex="-1" role="dialog" aria-hidden="true">*@
     <div class="modal-dialog ">
         @*<div class="modal-dialog modal-lg">*@
-            <div class="modal-content">
+        <div class="modal-content">
 
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal">
-                        <span aria-hidden="true">×</span>
-                    </button>
-                    <h4 class="modal-title" id="myModalLabel">新增角色</h4>
-                </div>
-                <div class="modal-body">
-                    <form role="form" class="form-horizontal" method="post" name="formid" id="formid"  action="/RoleManage/RegisterRole">
-                        <div class="form-group">
-                            <label class="col-lg-2 col-sm-2 control-label">角色名称</label>
-                            <div class="col-lg-6">
-                               
-                                    <input type="text" placeholder="角色名称" id="RoleName" name="RoleName" class="form-control" nullmsg="请输入角色名称！" required="required">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">
+                    <span aria-hidden="true">×</span>
+                </button>
+                <h4 class="modal-title" id="myModalLabel">新增角色</h4>
+            </div>
+            <div class="modal-body">
+                <form role="form" class="form-horizontal" method="post" name="formid" id="formid" action="/RoleManage/RegisterRole">
+                    <div class="form-group">
+                        <label class="col-lg-2 col-sm-2 control-label">角色名称</label>
+                        <div class="col-lg-6">
 
-                            </div>
+                            <input type="text" placeholder="角色名称" id="RoleName" name="RoleName" class="form-control" nullmsg="请输入角色名称！" required="required">
+
                         </div>
-                        <div class="form-group">
-                            <label class="col-lg-2 col-sm-2 control-label">客户端标识</label>
-                            <div class="col-lg-6">
-                                <select class=" form-control" name="ClientName"  id="ClientName">
-                                </select>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-2 col-sm-2 control-label">客户端标识</label>
+                        <div class="col-lg-6">
+                            <select class=" form-control ClientName" name="ClientName" ></select>
 
-                            </div>
                         </div>
-                        <div class="form-group">
-                            <label class="col-lg-2 col-sm-2 control-label">角色描述</label>
-                            <div class="col-lg-6">
-                                <input type="text" placeholder="角色描述" id="Description" name="Description" class="form-control" nullmsg="请输入角色描述" required="required">
-                            </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-2 col-sm-2 control-label">角色描述</label>
+                        <div class="col-lg-6">
+                            <input type="text" placeholder="角色描述" id="Description" name="Description" class="form-control" nullmsg="请输入角色描述" required="required">
                         </div>
+                    </div>
 
 
 
-                        <div class="modal-footer">
-                            <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                            <button class="btn btn-danger" type="submit" id="submitbt">确定</button>
-                        </div>
-                    </form>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                        <button class="btn btn-danger" type="submit" id="submitbt">确定</button>
+                    </div>
+                </form>
 
-                </div>
             </div>
         </div>
     </div>
-    <script src="~/js/Validform_v5.3.2_min.js" type="text/javascript"></script>
-    @*<script src="~/lib/validator/validator.js" type="text/javascript"></script>*@
-    @*<script src="~/lib/bootstrap-select/dist/js/bootstrap-select.js" type="text/javascript"></script>
+</div>
+<script src="~/js/Validform_v5.3.2_min.js" type="text/javascript"></script>
+@*<script src="~/lib/validator/validator.js" type="text/javascript"></script>*@
+@*<script src="~/lib/bootstrap-select/dist/js/bootstrap-select.js" type="text/javascript"></script>
     <script src="~/lib/bootstrap-select/dist/js/i18n/defaults-zh_CN.min.js" type="text/javascript"></script>*@
-    @*<script src="~/js/BootstrapselectEx.js" type="text/javascript"></script>*@
-    <script type="text/javascript">
-        var $table = $('#table'),
-            selections = [];
-        $(function () {
-            $('#table').bootstrapTable({
-                url: '/RoleManage/AllRoleList',
-                method: 'POST',
-                contentType: 'application/x-www-form-urlencoded',
-                pageNumber: 1,
-                pagination: true,
-                pageSize: 15,
-                pageList: [15, 20, 30, 50],
-                sortable: true,
-                height: "100%",
-                sortOrder: 'desc',
-                sidePagination: "server",
-                silentSort: false,
-                toolbar: '#toolbar',
-                showToggle: true,
-                showColumns: true,
-                showRefresh: true,
-                //showFullscreen:true,
-                //search: true,
-                //searchOnEnterKey:true,
-                queryParams: queryParams,
-                showExport: true,
-                exportTypes: ['excel'],
-                exportDataType: 'all',
-                exportOptions: {
-                    fileName: '角色列表', //导出文件名
-                    worksheetName: 'sheet1', //工作表的名
-                },
+@*<script src="~/js/BootstrapselectEx.js" type="text/javascript"></script>*@
+<script type="text/javascript">
+    var $table = $('#table'),
+        selections = [];
+    $(function () {
+        $('#table').bootstrapTable({
+            url: '/RoleManage/AllRoleList',
+            method: 'POST',
+            contentType: 'application/x-www-form-urlencoded',
+            pageNumber: 1,
+            pagination: true,
+            pageSize: 15,
+            pageList: [15, 20, 30, 50],
+            sortable: true,
+            height: "100%",
+            sortOrder: 'desc',
+            sidePagination: "server",
+            silentSort: false,
+            toolbar: '#toolbar-btn',
+            showToggle: true,
+            showColumns: true,
+            showRefresh: true,
+            //showFullscreen:true,
+            //search: true,
+            //searchOnEnterKey:true,
+            queryParams: queryParams,
+            showExport: true,
+            exportTypes: ['excel'],
+            exportDataType: 'all',
+            exportOptions: {
+                fileName: '角色列表', //导出文件名
+                worksheetName: 'sheet1', //工作表的名
+            },
 
 
-                //stickyHeader: true
-            });
-            function queryParams(params) {
-
-                return {
-
-                    offset: params.offset,
-
-                    limit: params.limit,
-
-                    order: params.order
-                    //name: params.sortName,
-                };
-            }
-
-            $('#addRoleModal').on('show.bs.modal', function () {
-                var target = $("#ClientName");
-                target.empty();
-                $.post("/CommonJson/GetClientName", function (data) {
-                    target.append("<option value='local'>local</option>")
-                    $.each(data, function (i, item) {
-                        var option = $('<option></option>');
-                        option.attr('value', item.name);
-                        option.text(item.name);
-                        target.append(option);
-                    });
-                    //target.selectpicker();
-                })
-            })
-            $('#addRoleModal').on('hidden.bs.modal', function () {
-                //alert("aaaa");
-                //$(this).removeData('bs.modal');
-                $('#formid')[0].reset();
-            });
+            //stickyHeader: true
         });
-        function remove() {
-            var selectcheckes = $('#table').bootstrapTable('getSelections');
-            if (selectcheckes.length <= 0) {
-                //bootbox.alert("Hello world!");
-                notice("错误","error","警告：<h3>请选择你要删除的角色！</h3>");
-            }
-            else if (selectcheckes.length > 1) {
-                notice("错误", "error", "警告：<h3>对不起你只能选择一个！</h3>");
-            }
-            else {
-                bootbox.confirm({
-                    message: "删除该角色将会造成分配给该角色的用户无法登陆,你是否要删除该角色?",
-                    buttons: {
-                        confirm: {
-                            label: 'Yes',
-                            className: 'btn-success'
-                        },
-                        cancel: {
-                            label: 'No',
-                            className: 'btn-danger'
-                        }
-                    },
-                    callback: function (result) {
-                        if (result) { 
+        function queryParams(params) {
 
-                            var ids = $.map(selectcheckes, function (row) {
-                                $.post("/RoleManage/DeleteRole", { id: row.id }, function (data) {
-                                    if (data.errorCode > 0) {
-                                        notice("成功", "success", "删除成功");
-                                        $('#table').bootstrapTable('refresh', { silent: true });
-                                    }
-                                    else {
-                                        notice("错误", "error", "警告：<h3>" + data.errorMessage + "</h3>");
-                                    }
-                                });
-                            });
-                        }
-                    }
-                });
-            }
+            return {
 
+                offset: params.offset,
+
+                limit: params.limit,
+
+                order: params.order,
+
+                search: $("#searchpermissiontxt").val(),
+
+                clientname: $("#ClientNameBySearch").val()
+                //name: params.sortName,
+            };
         }
 
+        $.post("/CommonJson/GetClientName", function (data) {
+            var target = $(".ClientName");
+            target.append("<option value='local'>local</option>")
+            $.each(data, function (i, item) {
+                var option = $('<option></option>');
+                option.attr('value', item.name);
+                option.text(item.name);
+                target.append(option);
+            });
+          
+        })
 
-
-        $("#formid").Validform({
-            tiptype: 4,
-            ajaxPost: true,
-            callback: function (data) {
-                //console.log(data);
-                if (data.errorCode > 0) {
-                    notice("成功！", "success", "新增成功！");
-                    $('#table').bootstrapTable('refresh', { silent: true });
-                    $("#addRoleModal").modal('hide');
-                    //window.location.reload();
-                }
-                else {
-                    console.log(data);
-                    notice("错误！", "error", data.errorMessage);
-                    //notie.alert(3, "警告：<h3>" + data.errorMessage + "</h3>", 4);
-                }
-            }
+        $('#addRoleModal').on('hidden.bs.modal', function () {
+            //alert("aaaa");
+            //$(this).removeData('bs.modal');
+            $('#formid')[0].reset();
         });
+        $("#searchpermissionbtn").click(function () {
+            var serarchtxt = $("#searchpermissiontxt").val();
+            var ClientNameBySearch = $("#ClientNameBySearch").val();
+            if (serarchtxt.length == 0 && ClientNameBySearch.length==0) {
+                notice("错误", "error", "警告：<h3>搜索栏不能为空！</h3>");
+                $("#searchpermissiontxt").focus();
+                return false;
+            }
+            $('#table').bootstrapTable('refresh', { silent: true });
+        });
+        $("#btn_reset").click(function () {
+            //console.log("aaa");
+            $("#searchpermissiontxt").val("");
+            //$("#ClientNameBySearch").val("");
+            $("#ClientNameBySearch option[value='']").attr("selected", "selected");
+            //$("").find("option[text='--请选择--']").attr("selected", true);
+            $('#table').bootstrapTable('refresh', { silent: true });
+        });
+    });
+    function remove() {
+        var selectcheckes = $('#table').bootstrapTable('getSelections');
+        if (selectcheckes.length <= 0) {
+            //bootbox.alert("Hello world!");
+            notice("错误", "error", "警告：<h3>请选择你要删除的角色！</h3>");
+        }
+        else if (selectcheckes.length > 1) {
+            notice("错误", "error", "警告：<h3>对不起你只能选择一个！</h3>");
+        }
+        else {
+            bootbox.confirm({
+                message: "删除该角色将会造成分配给该角色的用户无法登陆,你是否要删除该角色?",
+                buttons: {
+                    confirm: {
+                        label: 'Yes',
+                        className: 'btn-success'
+                    },
+                    cancel: {
+                        label: 'No',
+                        className: 'btn-danger'
+                    }
+                },
+                callback: function (result) {
+                    if (result) {
 
- 
-    </script>
+                        var ids = $.map(selectcheckes, function (row) {
+                            $.post("/RoleManage/DeleteRole", { id: row.id }, function (data) {
+                                if (data.errorCode > 0) {
+                                    notice("成功", "success", "删除成功");
+                                    $('#table').bootstrapTable('refresh', { silent: true });
+                                }
+                                else {
+                                    notice("错误", "error", "警告：<h3>" + data.errorMessage + "</h3>");
+                                }
+                            });
+                        });
+                    }
+                }
+            });
+        }
+
+    }
+
+
+
+    $("#formid").Validform({
+        tiptype: 4,
+        ajaxPost: true,
+        callback: function (data) {
+            //console.log(data);
+            if (data.errorCode > 0) {
+                notice("成功！", "success", "新增成功！");
+                $('#table').bootstrapTable('refresh', { silent: true });
+                $("#addRoleModal").modal('hide');
+                //window.location.reload();
+            }
+            else {
+                console.log(data);
+                notice("错误！", "error", data.errorMessage);
+                //notie.alert(3, "警告：<h3>" + data.errorMessage + "</h3>", 4);
+            }
+        }
+    });
+
+
+</script>
 
